--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.7",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5"
   },
